Overlap issue fixed

--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap');
 
 body {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     text-align: center;
     background-image: url(images/background.jpg);
     background-size: 100%;
     background-attachment: fixed;
     overflow: hidden;
+    zoom: 100%;
 }
 
 
